TH-79668 hotfix. Previous commit didn't fix all the issues with table head alignment.

--- a/client/src/sass/views/equipment-list.scss
+++ b/client/src/sass/views/equipment-list.scss
@@ -13,10 +13,6 @@
       max-width: 100%;
     }
   }
-
-  thead {
-    overflow-wrap: break-word;
-  }
 }
 
 #equipment-detail {
